--- a/app/views/articles.html
+++ b/app/views/articles.html
@@ -1,3 +1,3 @@
-<div flex class="placeholder gray">
+<div flex class="placeholder teal">
     I'm below on mobile, and to the right on larger devices.
 </div>
