--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,3 +1,3 @@
-<div flex class="placeholder gray">
+<div flex class="placeholder green">
     I'm below on mobile, and to the right on larger devices.
 </div>
