--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -8,6 +8,13 @@
     color: #ffffff;
     padding-top: 15%;
 }
+.nav-button {
+    width: 100%;
+    height: 100%;
+}
+.toolbar{
+    position: fixed;
+}
 .red{
     background-color: red;
 }
