--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,10 @@
 .logo {
-    height: 12%;
-    width: 10%;
+    height: 20vh;
+    min-width: 18vh !important;
 }
 
 .tab {
+    color: #000;
     font-size: 1vw;
     text-align: center;
     padding-right: 10px;
@@ -14,6 +15,8 @@
 }
 
 .section {
+    margin-top: 0;
+    z-index: 5;
     margin-bottom: 4%;
     width: 1199px;
     max-width: 100vw;
@@ -38,11 +41,13 @@
 }
 
 .banner {
+
 }
 
 .plans {
     margin-bottom: 0;
-    padding-bottom: 20px;
+    padding-bottom: 5vh;
+    padding-top: 5vh;
     background-color: #000000;
 }
 
@@ -51,9 +56,10 @@
 }
 
 .plans_pre {
-    padding-bottom: 20px;
     margin-bottom: 0;
     background: #1A3042;
+    padding-bottom: 5vh;
+    padding-top: 5vh;
 }
 
 .red_title {
@@ -66,26 +72,83 @@
     color: #000;
     font-weight: bolder;
 }
+
 .white_anchor {
     font-size: 1vw;
     color: #ffffff;
     font-weight: bolder;
 }
-.yellow_title{
+
+.yellow_title {
     color: #FFDA63;
 }
-.red_background{
+
+.red_background {
     background-color: #87162C;
 }
-.white_text{
+
+.white_text {
     color: #ffffff;
 }
-.bagrut{
+
+.bagrut {
+    margin-bottom: 0;
+    padding-bottom: 7vh;
+    padding-top: 5vh;
+}
+
+.text_content {
+    text-align: center;
+    direction: rtl;
+}
+
+.gray_background {
+    background-color: #8B8E90;
     margin-bottom: 0;
     padding-bottom: 5vh;
     padding-top: 5vh;
 }
-.text_content{
-    text-align: center;
-    direction: rtl;
+
+.stuff {
+    margin-bottom: 0;
+    padding-bottom: 5vh;
+    padding-top: 5vh;
+    background-color: #87162C;
+}
+
+.bar_wrapper {
+    background-color: #ffffff;
+    width: 100vw;
+    left: 0;
+    top: 0;
+    z-index: 0;
+    position: absolute;
+    height: 30vh;
+    padding-left: 3vw;
+    padding-right: 3vw;
+}
+
+.content {
+    z-index: 5;
+    margin-top: 22vh;
+}
+
+.bar_content_wrapper {
+    padding-top: 7vh;
+}
+
+.cool_hr {
+    margin-bottom: 0;
+    padding-bottom: 0;
+    display: block;
+    height: 3px;
+    border: 3px;
+    border-top: 2px solid #87162C;
+    padding: 0;
+}
+.no_margin_h3{
+    margin-bottom: 0;
+}
+body{
+    background-color: #FAFAFA;
 }
