--- a/styles/animate.css
+++ b/styles/animate.css
@@ -276,6 +276,10 @@
 }
 
 .shake {
+  -webkit-animation-duration: 3s;
+  animation-duration: 3s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
   -webkit-animation-name: shake;
   animation-name: shake;
 }
