--- a/styles/main.css
+++ b/styles/main.css
@@ -119,6 +119,7 @@
 .bar_wrapper {
     background-color: #ffffff;
     width: 100vw;
+    max-width: 100vw;
     left: 0;
     top: 0;
     z-index: 0;
@@ -130,7 +131,6 @@
 
 .content {
     z-index: 5;
-    margin-top: 22vh;
 }
 
 .bar_content_wrapper {
@@ -149,6 +149,10 @@
 .no_margin_h3{
     margin-bottom: 0;
 }
-body{
+body .main_wrapper{
     background-color: #FAFAFA;
+}
+
+.read_more{
+    font-size: 2vh;
 }
