--- a/styles/main.css
+++ b/styles/main.css
@@ -48,7 +48,7 @@
     margin-bottom: 0;
     padding-bottom: 5vh;
     padding-top: 5vh;
-    background-color: #000000;
+    background-color: #263238;
 }
 
 .plans_item {
@@ -157,9 +157,14 @@
     padding: 0;
 }
 
-.no_margin_h3 {
+.no_margins_h3 {
     margin-top: 8px;
     margin-bottom: 0;
+}
+
+.braunch_title{
+    color: #87162C;
+    text-decoration: underline;
 }
 
 body .main_wrapper {
