--- a/views/dialog.html
+++ b/views/dialog.html
@@ -1,2 +1,2 @@
 <img
-        src="img/dialog_img.jpg" style="overflow: hidden;">
+        src="img/dialog_img.jpg" style="overflow: hidden;width: 100%;height: auto">
