--- a/styles/main.css
+++ b/styles/main.css
@@ -250,3 +250,9 @@ body .main_wrapper {
     padding-left: 10%;
     padding-right: 10%;
 }
+
+.fab{
+    position: fixed;
+    right: 4vw;
+    bottom: 2vh;
+}
