Added functionality to fab

--- a/views/info_bottom.html
+++ b/views/info_bottom.html
@@ -1,14 +1,36 @@
-<md-bottom-sheet class="md-list md-has-header" ng-cloak>
+<md-bottom-sheet class="md-list md-has-header" ng-cloak style="position: fixed;bottom: 0;">
     <md-subheader>Comment Actions</md-subheader>
-    <md-list>
-        <md-list-item ng-repeat="item in items">
-            <md-button
-                    ng-click="listItemClick($index)"
-                    md-autofocus="$index == 2"
-                    class="md-list-item-content" >
-                <md-icon md-svg-src="{{item.icon}}"></md-icon>
-                <span class="md-inline-list-icon-label">{{ item.name }}</span>
-            </md-button>
-        </md-list-item>
-    </md-list>
+    <md-content>
+        <p>
+
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+            electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+            Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+        <p>
+
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+            electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+            Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+        <p>
+
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+            electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+            Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+
+    </md-content>
+    <p align="right">
+        Terms & Conditions Privacy Policy @2016 Guy Koren
+    </p>
 </md-bottom-sheet>
