Added content to bootom sheet

--- a/views/info_bottom.html
+++ b/views/info_bottom.html
@@ -1,6 +1,5 @@
 <md-bottom-sheet class="md-list md-has-header" ng-cloak style="position: fixed;bottom: 0;">
-    <md-subheader>Comment Actions</md-subheader>
-    <md-content>
+    <md-subheader>Guy Koren</md-subheader>
         <p>
 
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
@@ -20,7 +19,6 @@
             Aldus PageMaker including versions of Lorem Ipsum.
         </p>
         <p>
-
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
             industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
             scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
@@ -28,9 +26,13 @@
             Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
             Aldus PageMaker including versions of Lorem Ipsum.
         </p>
-
+    <md-content layout="row" >
+        <p align="left" flex="50">
+            Crated by Tomer Rosenfeld (rosenpin@Github)
+        </p>
+        <p align="right" flex="50">
+            Terms & Conditions Privacy Policy @2016 Guy Koren
+        </p>
     </md-content>
-    <p align="right">
-        Terms & Conditions Privacy Policy @2016 Guy Koren
-    </p>
+
 </md-bottom-sheet>
