--- a/styles/main.css
+++ b/styles/main.css
@@ -61,8 +61,8 @@
     margin-bottom: 0;
     padding-bottom: 10vh;
     padding-top: 5vh;
-    background-color: #263238;
 }
+
 
 .plans_item {
 
@@ -117,6 +117,10 @@
 .text_content {
     text-align: center;
     direction: rtl;
+}
+
+.bluish_gray_background{
+    background-color: #263238;
 }
 
 .gray_background {
