--- a/styles/main.css
+++ b/styles/main.css
@@ -49,7 +49,7 @@
     object-fit: cover;
 }
 
-.branches_wrapper_big_screen{
+.branches_wrapper_big_screen {
     padding-right: 5%;
 }
 
@@ -66,7 +66,6 @@
     padding-bottom: 10vh;
     padding-top: 5vh;
 }
-
 
 .plans_item {
 
@@ -123,7 +122,7 @@
     direction: rtl;
 }
 
-.bluish_gray_background{
+.bluish_gray_background {
     background-color: #263238;
 }
 
@@ -209,12 +208,12 @@ body .main_wrapper {
 
 #scrolling {
     width: 100% !important;
-    overflow-x: scroll;
+    overflow-x: hidden;
 
 }
 
 .book {
-    width: 10vw;
+    height: 300px
 }
 
 .scroll_material_item {
@@ -259,8 +258,16 @@ body .main_wrapper {
     padding-right: 10%;
 }
 
-.fab{
+.fab {
     position: fixed;
     right: 4vw;
     bottom: 2vh;
+}
+
+.rotate_180 {
+    transform: rotate(180deg)
+}
+
+.md-fab-scroll{
+    margin-top: 150px;
 }
