--- a/styles/main.css
+++ b/styles/main.css
@@ -111,7 +111,7 @@
     color: #ffffff;
 }
 
-.bagrut {
+.bagrut , .fasttest{
     margin-bottom: 0;
     padding-bottom: 7vh;
     padding-top: 5vh;
