--- a/views/dialog.html
+++ b/views/dialog.html
@@ -1,2 +1,7 @@
-<img
-        src="img/dialog_img.jpg" style="overflow: hidden;height: auto;">
+<div layout="row" layout-align="end center">
+    <md-button layout="row" layout-align="end center" ng-click="hide()">
+        <md-icon align="right" md-svg-src="img/close.svg"></md-icon>
+    </md-button>
+</div>
+
+<iframe src="http://eranmargalit7.wix.com/guykoren" style="width: 80vw;height: 80vh"></iframe>
