Added - in braunches

--- a/views/dialog.html
+++ b/views/dialog.html
@@ -4,4 +4,6 @@
     </md-button>
 </div>
 
-<iframe src="http://eranmargalit7.wix.com/guykoren" style="width: 80vw;height: 80vh"></iframe>
+<iframe src="http://eranmargalit7.wix.com/guykoren" style="width: 80vw;height: 80vh">
+    <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+</iframe>
