Added to Aschool

--- a/views/info_bottom.html
+++ b/views/info_bottom.html
@@ -28,7 +28,7 @@
         </p>
     <md-content layout="row" >
         <p align="left" flex="50">
-            Crated by Tomer Rosenfeld (rosenpin@Github)
+            Created by Tomer Rosenfeld (rosenpin@Github)
         </p>
         <p align="right" flex="50">
             Terms & Conditions Privacy Policy @2016 Guy Koren
