--- a/styles/main.css
+++ b/styles/main.css
@@ -103,6 +103,10 @@
     background-color: #87162C;
 }
 
+.gold_background {
+    background-color: #D2691E;
+}
+
 .blue_background {
     background-color: #1A3042;
 }
@@ -111,7 +115,7 @@
     color: #ffffff;
 }
 
-.bagrut , .fasttest{
+.bagrut , .fasttest , .ad{
     margin-bottom: 0;
     padding-bottom: 7vh;
     padding-top: 5vh;
